# COEN-296-PROJECT

./: README.md
Blue Team/: E2E_TESTING_GUIDE.md  LICENSE  PHASE_6_VERIFICATION.md  README.md  agent_whitelist.json  mcp_server.py  pyproject.toml  redteam_security_tests.py  requirements-core.txt  requirements.txt  run_demo.py  run_e2e_comprehensive.py
Blue Team/agents/: mcp_drive_server.py  mcp_email_server.py
Blue Team/app/: __init__.py  agent.py  expense_agent.py  main.py  mcp_server.py  red_team_suite.py  retriever.py  tools.py  validators.py
Blue Team/configs/: env.example
Blue Team/docs/: Architecture_Diagram.md  DATA_ENCRYPTION_REVIEW.md  DOCUMENTATION_INDEX.md  E2ETests.md  E2E_TEST_DOCUMENTATION.md  Governance_Connection.md  MCP_SPECIALIZED_AGENTS.md  PRODUCTION_ENHANCEMENTS.md  REPOSITORY_ORGANIZATION.md  RedTeamTestSuiteOutline.md  RedTeamUserGuide.md  Red_Team_Test_Suite.md  Reporting_Template.md  SECURITY_CRITICAL_FILES.md  SECURITY_IMPLEMENTATION_SUMMARY.md  SETUP_ENVIRONMENT.md  System_Audit_NIST_RMF.md  System_User_Guide.md  TEST_OUTCOMES_EVIDENCE.md  ThreatModelOutline.md  Threat_Model.md  USER_GUIDE.md  UserGuide.md  e2e_test_results.json  project_test.md  security_audit.md
Blue Team/logs/: audit.jsonl  events.jsonl  security.jsonl
Blue Team/project/: README.md  requirements.txt  run_demo.py  run_instructions.md
Blue Team/project/app/: __init__.py  agent.py  cli.py  (+2 more)
Blue Team/redteam/: run_rt01_local.py
Blue Team/scripts/: bootstrap_system.py
Blue Team/tests/: __init__.py  conftest.py  test_blue_team_defenses.py  test_e2e_workflow.py
(+38 files in other folders)
